# Stocki

./: Cargo.toml  README.md
src/: lib.rs  main.rs  style.rs  test.rs
src/plot/: candle.rs  mod.rs  plot.rs
src/types/: mod.rs
src/utils/: mod.rs
