[package]
name = "stocki"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
env_logger = "0.11.5"
egui_extras = "0.29.1"
egui_plot = "0.29.0"
serde = "1.0.210"
serde_json = "1.0.128"
chrono = "0.4.38"
yahoo_finance_api = "2.3.0"
tokio-test = "0.4.4"
reqwest = "0.12.8"
time = "0.3.36"
rayon = "1.10.0"

[profile.release]
opt-level = 3 # fast and small wasm